@@ -1,0 +1,9 @@
+Title: Fixed possible exception when a view is linking to a not permitted other view
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i3
+Date: 1480943083
+Class: fix
+
+
